tests/baselines/reference/umd8.errors.txt
tests/cases/conformance/externalModules/a.ts(7,14): error TS2686: Identifier 'Foo' must be imported from a module


==== tests/cases/conformance/externalModules/a.ts (1 errors) ====
    /// <reference path="foo.d.ts" />
    import * as ff from './foo';
    
    let y: Foo; // OK in type position
    y.foo();
    let z: Foo.SubThing; // OK in ns position
    let x: any = Foo; // Not OK in value position
                 ~~~
!!! error TS2686: Identifier 'Foo' must be imported from a module
    
==== tests/cases/conformance/externalModules/foo.d.ts (0 errors) ====
    
    declare class Thing {
    	foo(): number;
    }
    declare namespace Thing {
    	interface SubThing { }
    }
    export = Thing;
    export as namespace Foo;
    